fix javadoc/some compiler warnings
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>