@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 2004, 2021 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2004, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * Oracle licenses this file to You under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
@@ -82,7 +82,7 @@ public class SingleRountTripTest {
         }
         
         RoundTripReport report = new RoundTripReport();
-        new SingleRountTripTest((RoundTripRtt) Class.forName(args[0]).newInstance(), report).processFileOrFolder(new File(args[1]));
+        new SingleRountTripTest((RoundTripRtt) Class.forName(args[0]).getConstructor().newInstance(), report).processFileOrFolder(new File(args[1]));
         try (PrintWriter writer = new PrintWriter(new OutputStreamWriter(new FileOutputStream(args[2])))) {
             writer.print(report.generateReport());
         }
